--- a/index.ipynb
+++ b/index.ipynb
@@ -94,7 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca = neigh"
+    "la_boca = neighborhoods[-1]\n"
    ]
   },
   {
