--- a/index.ipynb
+++ b/index.ipynb
@@ -150,7 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_latitude = "
+    "ba_latitude = coordinates[0]"
    ]
   },
   {
