--- a/index.ipynb
+++ b/index.ipynb
@@ -389,7 +389,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "buenos_markers = [buenos_marker]"
+    "buenos_markers = [buenos_marker]\n",
+    "buenos"
    ]
   },
   {
