--- a/index.ipynb
+++ b/index.ipynb
@@ -385,12 +385,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<folium.map.Marker at 0x7fdc65adbcf8>]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "buenos_markers = [buenos_marker]\n",
-    "buenos"
+    "buenos_markers"
    ]
   },
   {
