--- a/index.ipynb
+++ b/index.ipynb
@@ -410,7 +410,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "buenos_markers[0]"
+    "buenos_markers[0]\n",
+    "b"
    ]
   },
   {
