--- a/index.ipynb
+++ b/index.ipynb
@@ -406,12 +406,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<folium.map.Marker at 0x7fdc65adbcf8>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "buenos_markers[0]\n",
-    "b"
+    "buenos_markers[0]"
    ]
   },
   {
