--- a/index.ipynb
+++ b/index.ipynb
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +460,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca_marker = None"
+    "la_boca_marker = N"
    ]
   },
   {
