--- a/index.ipynb
+++ b/index.ipynb
@@ -567,7 +567,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "recoleta_marker = neighborhood_mar"
+    "recoleta_marker = neighborhood_marker[1]"
    ]
   },
   {
