Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -567,7 +567,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "recoleta_marker = neighborhood_marker[1]"
+    "recoleta_marker = neighborhood_marker[1]\n",
+    "recoleta"
    ]
   },
   {
